First version of  the pdf-plugin for OS X

--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -241,7 +241,7 @@ IF(RSVG_FOUND)
     ADD_SUBDIRECTORY(svg)
 ENDIF()
 
-IF(POPPLER_FOUND)
+IF(POPPLER_FOUND OR APPLE)
     ADD_SUBDIRECTORY(pdf)
 ENDIF()
 
