--- a/src/osgPlugins/pdf/CMakeLists.txt
+++ b/src/osgPlugins/pdf/CMakeLists.txt
@@ -1,9 +1,12 @@
-SET(TARGET_SRC ReaderWriterPDF.cpp )
+IF(APPLE)
+  SET(TARGET_SRC ReaderWriterPDF_OSX.cpp )
+ELSE()
+  SET(TARGET_SRC ReaderWriterPDF.cpp )
 
-INCLUDE_DIRECTORIES( ${CAIRO_INCLUDE_DIRS} ${POPPLER_INCLUDE_DIRS} )
-LINK_DIRECTORIES(${CAIRO_LIBRARY_DIRS} ${POPPLER_LIBRARY_DIRS})
-SET(TARGET_EXTERNAL_LIBRARIES  ${CAIRO_LIBRARIES} ${POPPLER_LIBRARIES} )
-
+  INCLUDE_DIRECTORIES( ${CAIRO_INCLUDE_DIRS} ${POPPLER_INCLUDE_DIRS} )
+  LINK_DIRECTORIES(${CAIRO_LIBRARY_DIRS} ${POPPLER_LIBRARY_DIRS})
+  SET(TARGET_EXTERNAL_LIBRARIES  ${CAIRO_LIBRARIES} ${POPPLER_LIBRARIES} )
+ENDIF()
 SET(TARGET_ADDED_LIBRARIES osgWidget)
 
 #### end var setup  ###
